Fix build for Java 21